bk_ida/gccida/g0/record_operand_costs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1443:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modes[30]; // [rsp+110h] [rbp-190h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1449:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1451:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
constraints[i] = recog_data_0.constraints[i]; 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1452:12: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
modes[i] = recog_data_0.operand_mode[i]; 
           ^~~~~~~~~~~~
           recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1454:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1476:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[i] == 63 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1478:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
inner = recog_data_0.operand[i]->fld[0].rtx; 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1479:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = inner; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1481:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[i] == 66 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1483:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
record_address_regs( recog_data_0.operand[i]->fld[0].rtx, GENERAL_REGS, 2 * frequency); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1487:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
record_address_regs( recog_data_0.operand[i], GENERAL_REGS, 2 * frequency); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1490:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands - 1; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1494:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( j = 0; j < recog_data_0.n_operands; ++j ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1499:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1500:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_operands, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1501:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1510:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1511:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_operands, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/regclass.c:1512:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_operand_costs/src/obj/regclass.o] Error 1
